fix input display on mobile safari for iOS 4 and below

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ input#word {
 	background: transparent;
 	border: 0px;
 	float: left;
+	-webkit-appearance: none;
 }
 
 #indicator.yup {
